[package]
name = "bloom-filter-yss"
version = "0.3.3"
edition = "2021"
authors = ["ysoseriouz"]
license = "MIT"
description = "Simple bloom filter for me or you"
repository = "https://github.com/ysoseriouz/bloom_filter"
readme = "README.md"
keywords = ["dsa"]

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.11"
